3. added travel tab with css/js

--- a/index.html
+++ b/index.html
@@ -228,6 +228,128 @@
       </div>
     </div>
 
+    <div class="tab-three__background">
+      <div class="tab-three">
+        <h3 class="tab-three__title">Travel</h3>
+        <nav class="tab-three__links">
+          <ul>
+            <li id="paris" class="active">
+              <img src="img/tab/paris.jpeg" />
+              <span class="place-name">Paris</span>
+            </li>
+            <li id="newyork">
+              <img src="img/tab/newyork.jpg" />
+              <span class="place-name">New York</span>
+            </li>
+            <li id="seoul">
+              <img src="img/tab/seoul.jpg" />
+              <span class="place-name">Seoul</span>
+            </li>
+            <li id="tokyo">
+              <img src="img/tab/tokyo.jpg" />
+              <span class="place-name">Tokyo</span>
+            </li>
+            <li id="venice">
+              <img src="img/tab/venice.jpg" />
+              <span class="place-name">Venice</span>
+            </li>
+          </ul>
+        </nav>
+        <div class="tab-three__content">
+          <div id="paris-tab" class="active">
+            <img src="img/tab/paris.jpeg" />
+            <span class="question-mark-circle active">
+              <i class="fas fa-question fa-lg"></i>
+            </span>
+            <div class="modal--img-top">
+              <h3 class="content__title">Paris</h3>
+              <p class="content__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Quibusdam consequuntur corporis reprehenderit repudiandae
+                eveniet animi recusandae! Architecto, sequi explicabo,
+                dignissimos id minima perspiciatis accusamus sapiente dolores
+                voluptas magnam suscipit. Quo!
+              </p>
+              <a href="#" class="content__detail-link">details</a>
+              <span class="modal__exit">❌</span>
+            </div>
+          </div>
+          <div id="newyork-tab">
+            <img src="img/tab/newyork.jpg" />
+            <span class="question-mark-circle active">
+              <i class="fas fa-question fa-lg"></i>
+            </span>
+            <div class="modal--img-top">
+              <h3 class="content__title">New York</h3>
+              <p class="content__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Quibusdam consequuntur corporis reprehenderit repudiandae
+                eveniet animi recusandae! Architecto, sequi explicabo,
+                dignissimos id minima perspiciatis accusamus sapiente dolores
+                voluptas magnam suscipit. Quo!
+              </p>
+              <a href="#" class="content__detail-link">details</a>
+              <span class="modal__exit">❌</span>
+            </div>
+          </div>
+          <div id="seoul-tab">
+            <img src="img/tab/seoul.jpg" />
+            <span class="question-mark-circle active">
+              <i class="fas fa-question fa-lg"></i>
+            </span>
+            <div class="modal--img-top">
+              <h3 class="content__title">Seoul</h3>
+              <p class="content__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Quibusdam consequuntur corporis reprehenderit repudiandae
+                eveniet animi recusandae! Architecto, sequi explicabo,
+                dignissimos id minima perspiciatis accusamus sapiente dolores
+                voluptas magnam suscipit. Quo!
+              </p>
+              <a href="#" class="content__detail-link">details</a>
+              <span class="modal__exit">❌</span>
+            </div>
+          </div>
+          <div id="tokyo-tab">
+            <img src="img/tab/tokyo.jpg" />
+            <span class="question-mark-circle active">
+              <i class="fas fa-question fa-lg"></i>
+            </span>
+            <div class="modal--img-top">
+              <h3 class="content__title">Tokyo</h3>
+              <p class="content__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Quibusdam consequuntur corporis reprehenderit repudiandae
+                eveniet animi recusandae! Architecto, sequi explicabo,
+                dignissimos id minima perspiciatis accusamus sapiente dolores
+                voluptas magnam suscipit. Quo!
+              </p>
+              <a href="#" class="content__detail-link">details</a>
+              <span class="modal__exit">❌</span>
+            </div>
+          </div>
+          <div id="venice-tab">
+            <img src="img/tab/venice.jpg" />
+            <span class="question-mark-circle active">
+              <i class="fas fa-question fa-lg"></i>
+            </span>
+            <div class="modal--img-top">
+              <h3 class="content__title">Venice</h3>
+              <p class="content__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Quibusdam consequuntur corporis reprehenderit repudiandae
+                eveniet animi recusandae! Architecto, sequi explicabo,
+                dignissimos id minima perspiciatis accusamus sapiente dolores
+                voluptas magnam suscipit. Quo!
+              </p>
+              <a href="#" class="content__detail-link">details</a>
+              <span class="modal__exit">❌</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- component scripts -->
     <script src="js/accordion.js"></script>
     <script src="js/tab.js"></script>
