4. Added New Tab - Using Checkbox

--- a/index.html
+++ b/index.html
@@ -350,6 +350,158 @@
       </div>
     </div>
 
+    <div class="checkbox-tab__container">
+      <a href="https://codepen.io/flkt-crnpio/pen/WxROwy/" target="_blank">
+        made by<br />
+        Flkt Crnpio
+      </a>
+
+      <h2>
+        NOT MADE BY ME<br />
+        <span>COPIED LINE-BY-LINE FOR STUDYING PURPOSE</span>
+      </h2>
+
+      <div class="tabs">
+        <div class="tab-2">
+          <label for="tab2-1">One</label>
+          <input type="radio" id="tab2-1" name="tabs-two" checked />
+          <div>
+            <h4>Tab One</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+              consequat id velit quis vestibulum. Nam id orci eu urna mollis
+              porttitor. Nunc nisi ante, gravida at velit eu, aliquet sodales
+              dui. Sed laoreet condimentum nisi a egestas.
+            </p>
+            <p>
+              Donec interdum ante ut enim consequat, quis varius nulla dapibus.
+              Vivamus mollis fermentum augue a varius. Vestibulum in sapien at
+              lectus gravida lobortis vulputate sed metus. Duis scelerisque
+              justo et maximus efficitur. Donec eu eleifend quam. Curabitur
+              aliquet commodo sapien eget vestibulum. Vestibulum ante ipsum
+              primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+              Vestibulum vel aliquet nunc, finibus posuere lorem. Suspendisse
+              consectetur volutpat est ut ornare.
+            </p>
+          </div>
+        </div>
+        <div class="tab-2">
+          <label for="tab2-2">Two</label>
+          <input type="radio" id="tab2-2" name="tabs-two" />
+          <div>
+            <h4>Tab Two</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+              consequat id velit quis vestibulum. Nam id orci eu urna mollis
+              porttitor. Nunc nisi ante, gravida at velit eu, aliquet sodales
+              dui. Sed laoreet condimentum nisi a egestas.
+            </p>
+            <p>
+              Donec interdum ante ut enim consequat, quis varius nulla dapibus.
+              Vivamus mollis fermentum augue a varius. Vestibulum in sapien at
+              lectus gravida lobortis vulputate sed metus. Duis scelerisque
+              justo et maximus efficitur. Donec eu eleifend quam. Curabitur
+              aliquet commodo sapien eget vestibulum. Vestibulum ante ipsum
+              primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+              Vestibulum vel aliquet nunc, finibus posuere lorem. Suspendisse
+              consectetur volutpat est ut ornare.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="slide-tabs">
+      <div class="slide-tab">
+        <input type="radio" name="slide-tab-link" checked />
+        <div class="slide-tab__content">
+          <h3>Lorem Ipsum</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            consequat id velit quis vestibulum. Nam id orci eu urna mollis
+            porttitor. Nunc nisi ante, gravida at velit eu, aliquet sodales dui.
+            Sed laoreet condimentum nisi a egestas.
+          </p>
+          <p>
+            Donec interdum ante ut enim consequat, quis varius nulla dapibus.
+            Vivamus mollis fermentum augue a varius. Vestibulum in sapien at
+            lectus gravida lobortis vulputate sed metus. Duis scelerisque justo
+            et maximus efficitur. Donec eu eleifend quam. Curabitur aliquet
+            commodo sapien eget vestibulum. Vestibulum ante ipsum primis in
+            faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum
+            vel aliquet nunc, finibus posuere lorem. Suspendisse consectetur
+            volutpat est ut ornare.
+          </p>
+        </div>
+      </div>
+      <div class="slide-tab">
+        <input type="radio" name="slide-tab-link" />
+        <div class="slide-tab__content">
+          <h3>Lorem Ipsum</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            consequat id velit quis vestibulum. Nam id orci eu urna mollis
+            porttitor. Nunc nisi ante, gravida at velit eu, aliquet sodales dui.
+            Sed laoreet condimentum nisi a egestas.
+          </p>
+          <p>
+            Donec interdum ante ut enim consequat, quis varius nulla dapibus.
+            Vivamus mollis fermentum augue a varius. Vestibulum in sapien at
+            lectus gravida lobortis vulputate sed metus. Duis scelerisque justo
+            et maximus efficitur. Donec eu eleifend quam. Curabitur aliquet
+            commodo sapien eget vestibulum. Vestibulum ante ipsum primis in
+            faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum
+            vel aliquet nunc, finibus posuere lorem. Suspendisse consectetur
+            volutpat est ut ornare.
+          </p>
+        </div>
+      </div>
+      <div class="slide-tab">
+        <input type="radio" name="slide-tab-link" />
+        <div class="slide-tab__content">
+          <h3>Lorem Ipsum</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            consequat id velit quis vestibulum. Nam id orci eu urna mollis
+            porttitor. Nunc nisi ante, gravida at velit eu, aliquet sodales dui.
+            Sed laoreet condimentum nisi a egestas.
+          </p>
+          <p>
+            Donec interdum ante ut enim consequat, quis varius nulla dapibus.
+            Vivamus mollis fermentum augue a varius. Vestibulum in sapien at
+            lectus gravida lobortis vulputate sed metus. Duis scelerisque justo
+            et maximus efficitur. Donec eu eleifend quam. Curabitur aliquet
+            commodo sapien eget vestibulum. Vestibulum ante ipsum primis in
+            faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum
+            vel aliquet nunc, finibus posuere lorem. Suspendisse consectetur
+            volutpat est ut ornare.
+          </p>
+        </div>
+      </div>
+      <div class="slide-tab">
+        <input type="radio" name="slide-tab-link" />
+        <div class="slide-tab__content">
+          <h3>Lorem Ipsum</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            consequat id velit quis vestibulum. Nam id orci eu urna mollis
+            porttitor. Nunc nisi ante, gravida at velit eu, aliquet sodales dui.
+            Sed laoreet condimentum nisi a egestas.
+          </p>
+          <p>
+            Donec interdum ante ut enim consequat, quis varius nulla dapibus.
+            Vivamus mollis fermentum augue a varius. Vestibulum in sapien at
+            lectus gravida lobortis vulputate sed metus. Duis scelerisque justo
+            et maximus efficitur. Donec eu eleifend quam. Curabitur aliquet
+            commodo sapien eget vestibulum. Vestibulum ante ipsum primis in
+            faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum
+            vel aliquet nunc, finibus posuere lorem. Suspendisse consectetur
+            volutpat est ut ornare.
+          </p>
+        </div>
+      </div>
+    </div>
+
     <!-- component scripts -->
     <script src="js/accordion.js"></script>
     <script src="js/tab.js"></script>
