5. Added Simple Top-Navbar with CSS Transition & JS

--- a/index.html
+++ b/index.html
@@ -502,9 +502,19 @@
       </div>
     </div>
 
+    <nav class="top-navbar">
+      <ul>
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
+
     <!-- component scripts -->
     <script src="js/accordion.js"></script>
     <script src="js/tab.js"></script>
+    <script src="js/navbar.js"></script>
 
     <!-- fontawesome -->
     <script
