6. Learn Us Clone - Side Navbar with JS

--- a/index.html
+++ b/index.html
@@ -511,6 +511,120 @@
       </ul>
     </nav>
 
+    <div class="side-navbar__container">
+      <div class="top-bar">
+        <div class="top-bar__column">
+          <i class="fas fa-bars"></i>
+          <a href="#">
+            <img
+              class="top-bar__logo"
+              src="img/navbar/learnus-logo.png"
+              alt="Learn-Us Logo"
+            />
+          </a>
+        </div>
+        <div class="top-bar__column">
+          <select class="top-bar__lang">
+            <option value="en">English (en)</option>
+            <option value="ko" selected>한국어 (ko)</option>
+          </select>
+          <button class="top-bar__sign-up">
+            <a href="#">회원가입</a>
+          </button>
+          <button class="top-bar__log-in">
+            <a href="#">로그인</a>
+          </button>
+        </div>
+      </div>
+      <nav class="side-navbar">
+        <ul>
+          <li>
+            <a href="#">
+              <img src="img/navbar/navbar-menu-icon1.png" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="img/navbar/navbar-menu-icon2.png" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="img/navbar/navbar-menu-icon3.png" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="img/navbar/navbar-menu-icon4.png" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="img/navbar/navbar-menu-icon5.png" />
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page-content">
+        <h3 class="page-content__title">Lorem Ipsum</h3>
+        <p class="page-content__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+          elementum lectus lorem, quis faucibus velit venenatis a. Sed at purus
+          nunc. Nam felis quam, rutrum sed leo vitae, faucibus sagittis libero.
+          Phasellus facilisis quam in enim consequat rhoncus. Vivamus in
+          ullamcorper tortor. Proin eget lectus ut ligula rutrum euismod. Etiam
+          eu laoreet magna.
+        </p>
+
+        <p class="page-content__text">
+          Aliquam rhoncus lorem at viverra congue. Sed laoreet tellus libero,
+          non sodales neque sodales non. Interdum et malesuada fames ac ante
+          ipsum primis in faucibus. Nulla vitae metus risus. Etiam tortor
+          sapien, aliquam eget facilisis eget, interdum in sem. Maecenas
+          pharetra leo orci, ac efficitur purus efficitur ac. Phasellus ut nulla
+          sagittis, ornare diam vel, facilisis justo. Vestibulum ante ipsum
+          primis in faucibus orci luctus et ultrices posuere cubilia curae;
+          Curabitur gravida ipsum nec eros ornare vehicula. Vestibulum
+          scelerisque fringilla pharetra. Aenean ac euismod nunc. Quisque mollis
+          et metus vitae tincidunt. Curabitur turpis lorem, porta id eros sit
+          amet, interdum placerat risus. Interdum et malesuada fames ac ante
+          ipsum primis in faucibus.
+        </p>
+
+        <p class="page-content__text">
+          Aenean laoreet velit at tincidunt sodales. Sed consequat dapibus nisl,
+          ultricies vestibulum mi pharetra in. Phasellus sagittis eu quam nec
+          vulputate. Vestibulum id risus vitae nibh finibus scelerisque quis
+          euismod urna. Integer id justo semper, eleifend lacus sit amet,
+          convallis sem. Mauris ornare enim vel sapien congue lacinia. Integer
+          id laoreet arcu, eu vulputate lorem. Aenean vel tellus in lectus
+          consequat volutpat a ut ipsum. Maecenas lectus velit, dignissim at
+          egestas mollis, fermentum sit amet tortor.
+        </p>
+
+        <p class="page-content__text">
+          Aliquam laoreet enim vel elit ullamcorper, sit amet consequat tellus
+          sodales. Vestibulum dictum pulvinar tincidunt. Cras venenatis sapien
+          sit amet magna mollis, at hendrerit nibh volutpat. Pellentesque
+          habitant morbi tristique senectus et netus et malesuada fames ac
+          turpis egestas. Vestibulum finibus sit amet lectus quis laoreet.
+          Pellentesque eget laoreet purus, quis porttitor dolor. Nunc at
+          vulputate leo. Praesent sollicitudin auctor efficitur. Mauris posuere
+          interdum risus eget sodales.
+        </p>
+
+        <p class="page-content__text">
+          Phasellus blandit est vitae elit commodo accumsan. Cras mattis ornare
+          justo, eu pretium tellus rhoncus et. Cras scelerisque leo nec iaculis
+          euismod. Morbi suscipit luctus sapien, et tristique dolor dapibus id.
+          Duis magna orci, sagittis in ipsum at, interdum congue orci. Lorem
+          ipsum dolor sit amet, consectetur adipiscing elit. Donec quis elit eu
+          eros luctus eleifend.
+        </p>
+      </div>
+      <div class="screen-mask"></div>
+    </div>
+
     <!-- component scripts -->
     <script src="js/accordion.js"></script>
     <script src="js/tab.js"></script>
