7. Search Box with CSS Animation + JS

--- a/index.html
+++ b/index.html
@@ -625,10 +625,34 @@
       <div class="screen-mask"></div>
     </div>
 
+    <div class="search-box__container">
+      <div class="search-box">
+        <input type="text" placeholder="Search" />
+        <button class="search-btn">
+          <i class="fas fa-search fa-2x"></i>
+        </button>
+      </div>
+      <div class="search-box-two">
+        <input type="text" placeholder="Search" />
+        <button class="search-btn">
+          <i class="fas fa-search fa-2x"></i>
+        </button>
+      </div>
+    </div>
+
+    <div class="swing-search__container">
+      <div class="swing-search">
+        <input type="text" placeholder="Search" />
+        <button>Go</button>
+        <i class="fas fa-search fa-2x"></i>
+      </div>
+    </div>
+
     <!-- component scripts -->
     <script src="js/accordion.js"></script>
     <script src="js/tab.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="js/search-menu.js"></script>
 
     <!-- fontawesome -->
     <script
